wip prima implementazione DOCKER completo + Vonage (rimozione twillio)
