# frontend/swagger.json
@@ -1667,243 +1667,6 @@
         }
       }
     },
-    "/api/TwilioSms/webhook": {
-      "post": {
-        "tags": ["TwilioSms"],
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "MessageSid": {
-                    "type": "string"
-                  },
-                  "AccountSid": {
-                    "type": "string"
-                  },
-                  "From": {
-                    "type": "string"
-                  },
-                  "To": {
-                    "type": "string"
-                  },
-                  "Body": {
-                    "type": "string"
-                  },
-                  "MessageStatus": {
-                    "type": "string"
-                  },
-                  "NumMedia": {
-                    "type": "string"
-                  },
-                  "SmsStatus": {
-                    "type": "string"
-                  },
-                  "SmsMessageSid": {
-                    "type": "string"
-                  },
-                  "NumSegments": {
-                    "type": "string"
-                  },
-                  "ReferralNumMedia": {
-                    "type": "string"
-                  }
-                }
-              },
-              "encoding": {
-                "MessageSid": {
-                  "style": "form"
-                },
-                "AccountSid": {
-                  "style": "form"
-                },
-                "From": {
-                  "style": "form"
-                },
-                "To": {
-                  "style": "form"
-                },
-                "Body": {
-                  "style": "form"
-                },
-                "MessageStatus": {
-                  "style": "form"
-                },
-                "NumMedia": {
-                  "style": "form"
-                },
-                "SmsStatus": {
-                  "style": "form"
-                },
-                "SmsMessageSid": {
-                  "style": "form"
-                },
-                "NumSegments": {
-                  "style": "form"
-                },
-                "ReferralNumMedia": {
-                  "style": "form"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/TwilioSms/register-phone": {
-      "post": {
-        "tags": ["TwilioSms"],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterPhoneDTO"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterPhoneDTO"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterPhoneDTO"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/TwilioSms/audit-logs": {
-      "get": {
-        "tags": ["TwilioSms"],
-        "parameters": [
-          {
-            "name": "fromDate",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "format": "date-time"
-            }
-          },
-          {
-            "name": "toDate",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "format": "date-time"
-            }
-          },
-          {
-            "name": "phoneNumber",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "status",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 1
-            }
-          },
-          {
-            "name": "pageSize",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 50
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/TwilioSms/phone-mappings": {
-      "get": {
-        "tags": ["TwilioSms"],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/TwilioSms/phone-mappings/{id}": {
-      "delete": {
-        "tags": ["TwilioSms"],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/TwilioSms/statistics": {
-      "get": {
-        "tags": ["TwilioSms"],
-        "parameters": [
-          {
-            "name": "fromDate",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "format": "date-time"
-            }
-          },
-          {
-            "name": "toDate",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "format": "date-time"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/VehicleOAuth/GenerateUrl": {
       "get": {
         "tags": ["VehicleOAuth"],
